chore: change of wording on fresh account creation

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -578,8 +578,8 @@
   "Log in": "تسجيل الدخول",
   "Login": "تسجيل الدخول",
   "Login with:": "تسجيل الدخول مع:",
-  "Log Out": "تسجيل الخروج",
   "Logout": "تسجيل الخروج",
+  "Log Out": "تسجيل الخروج",
   "Log Out Other Browser Sessions": "تسجيل الخروج من جلساتك على المتصفحات الأخرى",
   "Longest streak": "أطول أثر",
   "Love": "حب",
@@ -641,8 +641,8 @@
   "New Password": "كلمة مرور جديدة",
   "New to Monica?": "هل أنت جديد في Monica؟",
   "Next": "التالي",
-  "Nickname": "كنية",
   "nickname": "كنية",
+  "Nickname": "كنية",
   "No cities have been added yet in any contact’s addresses.": "لم تتم إضافة أي مدن حتى الآن في عناوين أي جهة اتصال.",
   "No contacts found.": "لم يتم العثور على جهات اتصال.",
   "No countries have been added yet in any contact’s addresses.": "لم تتم إضافة أي دولة حتى الآن في عناوين أي جهة اتصال.",
@@ -984,6 +984,7 @@
   "The page has been deleted": "تم حذف الصفحة",
   "The page has been updated": "تم تحديث الصفحة",
   "The password is incorrect.": "كلمة المرور غير صحيحة.",
+  "The password should be at least 8 characters long.": "يجب أن تتكون كلمة المرور من 8 أحرف على الأقل.",
   "The pet category has been created": "تم إنشاء فئة الحيوانات الأليفة",
   "The pet category has been deleted": "تم حذف فئة الحيوانات الأليفة",
   "The pet category has been updated": "تم تحديث فئة الحيوانات الأليفة",
@@ -1104,6 +1105,7 @@
   "Too Many Requests": "طلبات كثيرة جدًا",
   "To see if they need anything": "لمعرفة ما إذا كانوا بحاجة إلى أي شيء",
   "To start, you need to create a vault.": "للبدء، تحتاج إلى إنشاء قبو.",
+  "To start, you need to create a vault. A vault is a private space where you can store your contacts.": "للبدء، تحتاج إلى إنشاء قبو. القبو عبارة عن مساحة خاصة يمكنك من خلالها تخزين جهات الاتصال الخاصة بك.",
   "Total:": "المجموع:",
   "Total streaks": "مجموع الشرائط",
   "Track a new metric": "تتبع مقياسًا جديدًا",
@@ -1162,6 +1164,7 @@
   "Verified": "تم التحقق",
   "Verify Email Address": "التحقق من عنوان البريد الإلكتروني",
   "Verify this email address": "تحقق من هذا البريد الألكتروني",
+  "Version :version.": "الإصدار :version.",
   "Version :version — commit [:short](:url).": "الإصدار :version — الالتزام [:short](:url).",
   "Via Telegram": "عبر برقية",
   "Video call": "مكالمة فيديو",
