--- a/lang/ca.json
+++ b/lang/ca.json
@@ -578,8 +578,8 @@
   "Log in": "Entrar",
   "Login": "Entrar",
   "Login with:": "Accedir amb:",
-  "Log Out": "Sortir",
   "Logout": "Sortir",
+  "Log Out": "Sortir",
   "Log Out Other Browser Sessions": "Tanca la sessió d’altres navegadors",
   "Longest streak": "Ratxa més llarga",
   "Love": "Amor",
@@ -641,8 +641,8 @@
   "New Password": "Contrasenya Nova",
   "New to Monica?": "Nou a la Monica?",
   "Next": "Pròxim",
-  "Nickname": "Pseudònim",
   "nickname": "sobrenom",
+  "Nickname": "Pseudònim",
   "No cities have been added yet in any contact’s addresses.": "Encara no s’ha afegit cap ciutat a les adreces de cap contacte.",
   "No contacts found.": "No s’han trobat contactes.",
   "No countries have been added yet in any contact’s addresses.": "Encara no s’ha afegit cap país a les adreces de cap contacte.",
@@ -984,6 +984,7 @@
   "The page has been deleted": "La pàgina s’ha suprimit",
   "The page has been updated": "La pàgina s’ha actualitzat",
   "The password is incorrect.": "Contrasenya no és correcta.",
+  "The password should be at least 8 characters long.": "La contrasenya ha de tenir almenys 8 caràcters.",
   "The pet category has been created": "S’ha creat la categoria de mascota",
   "The pet category has been deleted": "La categoria de la mascota s’ha suprimit",
   "The pet category has been updated": "La categoria de la mascota s’ha actualitzat",
@@ -1104,6 +1105,7 @@
   "Too Many Requests": "Massa peticions",
   "To see if they need anything": "A veure si necessiten alguna cosa",
   "To start, you need to create a vault.": "Per començar, heu de crear una volta.",
+  "To start, you need to create a vault. A vault is a private space where you can store your contacts.": "Per començar, heu de crear una volta. Una volta és un espai privat on podeu emmagatzemar els vostres contactes.",
   "Total:": "Total:",
   "Total streaks": "Rates totals",
   "Track a new metric": "Seguiment d’una mètrica nova",
@@ -1162,6 +1164,7 @@
   "Verified": "Verificat",
   "Verify Email Address": "Confirmeu la vostra adreça electrònica",
   "Verify this email address": "Verifica aquesta adreça de correu electrònic",
+  "Version :version.": "Versió :version.",
   "Version :version — commit [:short](:url).": "Versió :version — commit [:short](:url).",
   "Via Telegram": "A través de Telegram",
   "Video call": "Videotrucada",
