--- a/lang/da.json
+++ b/lang/da.json
@@ -578,8 +578,8 @@
   "Log in": "Log ind",
   "Login": "Log ind",
   "Login with:": "Login med:",
-  "Log Out": "Log ud",
   "Logout": "Log ud",
+  "Log Out": "Log ud",
   "Log Out Other Browser Sessions": "Log ud af andre browsersessioner",
   "Longest streak": "Længste streak",
   "Love": "Elsker",
@@ -641,8 +641,8 @@
   "New Password": "Nyt kodeord",
   "New to Monica?": "Ny for Monica?",
   "Next": "Næste",
-  "Nickname": "Kaldenavn",
   "nickname": "kaldenavn",
+  "Nickname": "Kaldenavn",
   "No cities have been added yet in any contact’s addresses.": "Ingen byer er blevet tilføjet endnu i nogen kontakts adresser.",
   "No contacts found.": "Ingen kontakter fundet.",
   "No countries have been added yet in any contact’s addresses.": "Ingen lande er blevet tilføjet endnu i nogen kontakts adresser.",
@@ -984,6 +984,7 @@
   "The page has been deleted": "Siden er blevet slettet",
   "The page has been updated": "Siden er blevet opdateret",
   "The password is incorrect.": "Adgangskoden er forkert.",
+  "The password should be at least 8 characters long.": "Adgangskoden skal være på mindst 8 tegn.",
   "The pet category has been created": "Kæledyrskategorien er blevet oprettet",
   "The pet category has been deleted": "Kæledyrskategorien er blevet slettet",
   "The pet category has been updated": "Kæledyrskategorien er blevet opdateret",
@@ -1104,6 +1105,7 @@
   "Too Many Requests": "For mange forespørgsler",
   "To see if they need anything": "For at se om de har brug for noget",
   "To start, you need to create a vault.": "For at starte skal du oprette en boks.",
+  "To start, you need to create a vault. A vault is a private space where you can store your contacts.": "For at starte skal du oprette en boks. En boks er et privat rum, hvor du kan gemme dine kontakter.",
   "Total:": "I alt:",
   "Total streaks": "Samlede streger",
   "Track a new metric": "Spor en ny metric",
@@ -1162,6 +1164,7 @@
   "Verified": "Verificeret",
   "Verify Email Address": "Bekræft email-adresse",
   "Verify this email address": "Bekræft denne e-mailadresse",
+  "Version :version.": "Version :version.",
   "Version :version — commit [:short](:url).": "Version :version — commit [:short](:url).",
   "Via Telegram": "Via Telegram",
   "Video call": "Videoopkald",
