--- a/lang/de.json
+++ b/lang/de.json
@@ -578,8 +578,8 @@
   "Log in": "Einloggen",
   "Login": "Anmelden",
   "Login with:": "Einloggen mit:",
-  "Log Out": "Abmelden",
   "Logout": "Abmelden",
+  "Log Out": "Abmelden",
   "Log Out Other Browser Sessions": "Andere Browser-Sitzungen abmelden",
   "Longest streak": "Längste Strähne",
   "Love": "Liebe",
@@ -641,8 +641,8 @@
   "New Password": "Neues Passwort",
   "New to Monica?": "Neu bei Monica?",
   "Next": "Nächste",
-  "Nickname": "Spitzname",
   "nickname": "Spitzname",
+  "Nickname": "Spitzname",
   "No cities have been added yet in any contact’s addresses.": "Zu den Kontaktadressen wurden noch keine Städte hinzugefügt.",
   "No contacts found.": "Keine Kontakte gefunden.",
   "No countries have been added yet in any contact’s addresses.": "Es wurden noch keine Länder zu den Kontaktadressen hinzugefügt.",
@@ -984,6 +984,7 @@
   "The page has been deleted": "Die Seite wurde gelöscht",
   "The page has been updated": "Die Seite wurde aktualisiert",
   "The password is incorrect.": "Das Passwort ist falsch.",
+  "The password should be at least 8 characters long.": "Das Passwort sollte mindestens 8 Zeichen lang sein.",
   "The pet category has been created": "Die Haustierkategorie wurde erstellt",
   "The pet category has been deleted": "Die Haustierkategorie wurde gelöscht",
   "The pet category has been updated": "Die Haustierkategorie wurde aktualisiert",
@@ -1104,6 +1105,7 @@
   "Too Many Requests": "Zu viele Anfragen",
   "To see if they need anything": "Um zu sehen, ob sie etwas brauchen",
   "To start, you need to create a vault.": "Zunächst müssen Sie einen Tresor erstellen.",
+  "To start, you need to create a vault. A vault is a private space where you can store your contacts.": "Zunächst müssen Sie einen Tresor erstellen. Ein Tresor ist ein privater Bereich, in dem Sie Ihre Kontakte speichern können.",
   "Total:": "Gesamt:",
   "Total streaks": "Totale Streaks",
   "Track a new metric": "Verfolgen Sie eine neue Metrik",
@@ -1162,6 +1164,7 @@
   "Verified": "Verifiziert",
   "Verify Email Address": "E-Mail-Adresse bestätigen",
   "Verify this email address": "Bestätigen Sie diese E-Mail-Adresse",
+  "Version :version.": "Version :version.",
   "Version :version — commit [:short](:url).": "Version :version — Commit [:short](:url).",
   "Via Telegram": "Per Telegramm",
   "Video call": "Videoanruf",
