--- a/lang/el.json
+++ b/lang/el.json
@@ -578,8 +578,8 @@
   "Log in": "Συνδεθείτε",
   "Login": "Είσοδος",
   "Login with:": "Συνδέσου με:",
-  "Log Out": "αποσυνδεθείτε",
   "Logout": "Έξοδος",
+  "Log Out": "αποσυνδεθείτε",
   "Log Out Other Browser Sessions": "Αποσυνδεθείτε Από Άλλες Συνεδρίες Του Προγράμματος Περιήγησης",
   "Longest streak": "Το μεγαλύτερο σερί",
   "Love": "Αγάπη",
@@ -641,8 +641,8 @@
   "New Password": "Νέος Κωδικός Πρόσβασης",
   "New to Monica?": "Νέος στη Monica;",
   "Next": "Επόμενο",
-  "Nickname": "Παρατσούκλι",
   "nickname": "παρατσούκλι",
+  "Nickname": "Παρατσούκλι",
   "No cities have been added yet in any contact’s addresses.": "Δεν έχουν προστεθεί ακόμη πόλεις στις διευθύνσεις οποιασδήποτε επαφής.",
   "No contacts found.": "Δεν βρέθηκαν επαφές.",
   "No countries have been added yet in any contact’s addresses.": "Δεν έχουν προστεθεί ακόμη χώρες στις διευθύνσεις οποιασδήποτε επαφής.",
@@ -984,6 +984,7 @@
   "The page has been deleted": "Η σελίδα έχει διαγραφεί",
   "The page has been updated": "Η σελίδα έχει ενημερωθεί",
   "The password is incorrect.": "Ο κωδικός πρόσβασης είναι λανθασμένος.",
+  "The password should be at least 8 characters long.": "Ο κωδικός πρόσβασης πρέπει να αποτελείται από τουλάχιστον 8 χαρακτήρες.",
   "The pet category has been created": "Η κατηγορία κατοικίδιων έχει δημιουργηθεί",
   "The pet category has been deleted": "Η κατηγορία κατοικίδιων ζώων έχει διαγραφεί",
   "The pet category has been updated": "Η κατηγορία κατοικίδιων ζώων έχει ενημερωθεί",
@@ -1104,6 +1105,7 @@
   "Too Many Requests": "Πάρα πολλά αιτήματα",
   "To see if they need anything": "Για να δούμε αν χρειάζονται κάτι",
   "To start, you need to create a vault.": "Για να ξεκινήσετε, πρέπει να δημιουργήσετε ένα θησαυροφυλάκιο.",
+  "To start, you need to create a vault. A vault is a private space where you can store your contacts.": "Για να ξεκινήσετε, πρέπει να δημιουργήσετε ένα θησαυροφυλάκιο. Το θησαυροφυλάκιο είναι ένας ιδιωτικός χώρος όπου μπορείτε να αποθηκεύσετε τις επαφές σας.",
   "Total:": "Σύνολο:",
   "Total streaks": "Συνολικά σερί",
   "Track a new metric": "Παρακολούθηση νέας μέτρησης",
@@ -1162,6 +1164,7 @@
   "Verified": "Επαληθεύτηκε",
   "Verify Email Address": "Επιβεβαιώστε τη διεύθυνση ηλεκτρονικού ταχυδρομείου",
   "Verify this email address": "Επαληθεύστε αυτήν τη διεύθυνση ηλεκτρονικού ταχυδρομείου",
+  "Version :version.": "Έκδοση :version.",
   "Version :version — commit [:short](:url).": "Έκδοση :version — δέσμευση [:short](:url).",
   "Via Telegram": "Μέσω Telegram",
   "Video call": "Κλήση βίντεο",
