--- a/lang/es.json
+++ b/lang/es.json
@@ -578,8 +578,8 @@
   "Log in": "Iniciar sesión",
   "Login": "Iniciar sesión",
   "Login with:": "Inicia con:",
-  "Log Out": "Finalizar sesión",
   "Logout": "Finalizar sesión",
+  "Log Out": "Finalizar sesión",
   "Log Out Other Browser Sessions": "Cerrar las demás sesiones",
   "Longest streak": "Racha más larga",
   "Love": "Amar",
@@ -641,8 +641,8 @@
   "New Password": "Nueva Contraseña",
   "New to Monica?": "¿Nuevo en Monica?",
   "Next": "Próximo",
-  "Nickname": "Apodo",
   "nickname": "apodo",
+  "Nickname": "Apodo",
   "No cities have been added yet in any contact’s addresses.": "Aún no se han agregado ciudades en las direcciones de ningún contacto.",
   "No contacts found.": "No se encontraron contactos.",
   "No countries have been added yet in any contact’s addresses.": "Aún no se han agregado países en las direcciones de ningún contacto.",
@@ -984,6 +984,7 @@
   "The page has been deleted": "La pagina ha sido eliminada.",
   "The page has been updated": "La pagina ha sido actualizada",
   "The password is incorrect.": "La contraseña es incorrecta.",
+  "The password should be at least 8 characters long.": "La contraseña debe tener al menos 8 caracteres.",
   "The pet category has been created": "La categoría de mascota ha sido creada.",
   "The pet category has been deleted": "La categoría de mascota ha sido eliminada.",
   "The pet category has been updated": "La categoría de mascotas ha sido actualizada.",
@@ -1104,6 +1105,7 @@
   "Too Many Requests": "Demasiadas peticiones",
   "To see if they need anything": "Para ver si necesitan algo",
   "To start, you need to create a vault.": "Para comenzar, necesitas crear una bóveda.",
+  "To start, you need to create a vault. A vault is a private space where you can store your contacts.": "Para comenzar, necesitas crear una bóveda. Una bóveda es un espacio privado donde puedes almacenar tus contactos.",
   "Total:": "Total:",
   "Total streaks": "Rachas totales",
   "Track a new metric": "Seguimiento de una nueva métrica",
@@ -1162,6 +1164,7 @@
   "Verified": "Verificado",
   "Verify Email Address": "Confirme su correo electrónico",
   "Verify this email address": "Verifique este correo electronico",
+  "Version :version.": "Versión :version.",
   "Version :version — commit [:short](:url).": "Versión :version — commit [:short](:url).",
   "Via Telegram": "Vía telegrama",
   "Video call": "Videollamada",
