--- a/lang/he.json
+++ b/lang/he.json
@@ -578,8 +578,8 @@
   "Log in": "התחבר",
   "Login": "התחברות",
   "Login with:": "התחבר עם:",
-  "Log Out": "התנתק",
   "Logout": "התנתקות",
+  "Log Out": "התנתק",
   "Log Out Other Browser Sessions": "להתנתק הפעלות דפדפן אחרות",
   "Longest streak": "הרצף הארוך ביותר",
   "Love": "אהבה",
@@ -641,8 +641,8 @@
   "New Password": "סיסמה חדשה",
   "New to Monica?": "חדש Monica?",
   "Next": "הַבָּא",
-  "Nickname": "כינוי",
   "nickname": "כינוי",
+  "Nickname": "כינוי",
   "No cities have been added yet in any contact’s addresses.": "עדיין לא נוספו ערים בכתובות של איש קשר.",
   "No contacts found.": "לא נמצאו אנשי קשר.",
   "No countries have been added yet in any contact’s addresses.": "לא נוספו עדיין מדינות בכתובות של איש קשר.",
@@ -984,6 +984,7 @@
   "The page has been deleted": "הדף נמחק",
   "The page has been updated": "העמוד עודכן",
   "The password is incorrect.": "הסיסמא לא נכונה.",
+  "The password should be at least 8 characters long.": "הסיסמה צריכה להיות באורך של לפחות 8 תווים.",
   "The pet category has been created": "נוצרה קטגוריית חיות המחמד",
   "The pet category has been deleted": "קטגוריית חיות המחמד נמחקה",
   "The pet category has been updated": "קטגוריית חיות המחמד עודכנה",
@@ -1104,6 +1105,7 @@
   "Too Many Requests": "יותר מדי בקשות.",
   "To see if they need anything": "כדי לראות אם הם צריכים משהו",
   "To start, you need to create a vault.": "כדי להתחיל, עליך ליצור כספת.",
+  "To start, you need to create a vault. A vault is a private space where you can store your contacts.": "כדי להתחיל, עליך ליצור כספת. כספת היא מרחב פרטי שבו אתה יכול לאחסן את אנשי הקשר שלך.",
   "Total:": "סה\"כ:",
   "Total streaks": "סה\"כ פסים",
   "Track a new metric": "עקוב אחר מדד חדש",
@@ -1162,6 +1164,7 @@
   "Verified": "מְאוּמָת",
   "Verify Email Address": "אימות דואר אלקטרוני",
   "Verify this email address": "אמת את כתובת דוא\"ל זו",
+  "Version :version.": "גרסה :version.",
   "Version :version — commit [:short](:url).": "גרסה :version — commit [:short](:url).",
   "Via Telegram": "דרך טלגרם",
   "Video call": "שיחת וידאו",
