--- a/lang/hi.json
+++ b/lang/hi.json
@@ -578,8 +578,8 @@
   "Log in": "लॉग इन करें",
   "Login": "लॉगिन करें",
   "Login with:": "साथ प्रवेश करना:",
-  "Log Out": "लॉग आउट करें",
   "Logout": "लॉगआउट",
+  "Log Out": "लॉग आउट करें",
   "Log Out Other Browser Sessions": "अन्य ब्राउज़र सत्र लॉग आउट करें",
   "Longest streak": "सबसे लंबी लकीर",
   "Love": "प्यार",
@@ -641,8 +641,8 @@
   "New Password": "नया पासवर्ड",
   "New to Monica?": "Monica के लिए नया?",
   "Next": "अगला",
-  "Nickname": "उपनाम",
   "nickname": "उपनाम",
+  "Nickname": "उपनाम",
   "No cities have been added yet in any contact’s addresses.": "किसी भी संपर्क के पते में अभी तक कोई शहर नहीं जोड़ा गया है।",
   "No contacts found.": "कोई संपर्क नहीं मिला.",
   "No countries have been added yet in any contact’s addresses.": "किसी भी संपर्क के पते में अभी तक कोई देश नहीं जोड़ा गया है।",
@@ -984,6 +984,7 @@
   "The page has been deleted": "पेज हटा दिया गया है",
   "The page has been updated": "पेज अपडेट कर दिया गया है",
   "The password is incorrect.": "पासवर्ड गलत है।",
+  "The password should be at least 8 characters long.": "पासवर्ड कम से कम 8 अक्षर लंबा होना चाहिए।",
   "The pet category has been created": "पालतू पशु श्रेणी बनाई गई है",
   "The pet category has been deleted": "पालतू पशु श्रेणी हटा दी गई है",
   "The pet category has been updated": "पालतू पशु श्रेणी अद्यतन कर दी गई है",
@@ -1104,6 +1105,7 @@
   "Too Many Requests": "बहुत सारे अनुरोध",
   "To see if they need anything": "यह देखने के लिए कि क्या उन्हें किसी चीज़ की ज़रूरत है",
   "To start, you need to create a vault.": "आरंभ करने के लिए, आपको एक तिजोरी बनाने की आवश्यकता है।",
+  "To start, you need to create a vault. A vault is a private space where you can store your contacts.": "आरंभ करने के लिए, आपको एक तिजोरी बनाने की आवश्यकता है। तिजोरी एक निजी स्थान है जहाँ आप अपने संपर्क संग्रहीत कर सकते हैं।",
   "Total:": "कुल:",
   "Total streaks": "कुल धारियाँ",
   "Track a new metric": "एक नई मीट्रिक ट्रैक करें",
@@ -1162,6 +1164,7 @@
   "Verified": "सत्यापित",
   "Verify Email Address": "ईमेल पता सत्यापित करें",
   "Verify this email address": "इस ईमेल पते की पुष्टि करें",
+  "Version :version.": "संस्करण :version.",
   "Version :version — commit [:short](:url).": "संस्करण :version — प्रतिबद्ध [:short](:url)।",
   "Via Telegram": "टेलीग्राम के माध्यम से",
   "Video call": "वीडियो कॉल",
