--- a/lang/it.json
+++ b/lang/it.json
@@ -578,8 +578,8 @@
   "Log in": "Accedi",
   "Login": "Accedi",
   "Login with:": "Entra con:",
-  "Log Out": "Esci",
   "Logout": "Esci",
+  "Log Out": "Esci",
   "Log Out Other Browser Sessions": "Esci da altre sessioni del Browser",
   "Longest streak": "Serie più lunga",
   "Love": "Amore",
@@ -641,8 +641,8 @@
   "New Password": "Nuova password",
   "New to Monica?": "Nuovo per Monica?",
   "Next": "Prossimo",
-  "Nickname": "Soprannome",
   "nickname": "soprannome",
+  "Nickname": "Soprannome",
   "No cities have been added yet in any contact’s addresses.": "Nessuna città è stata ancora aggiunta agli indirizzi di nessun contatto.",
   "No contacts found.": "Nessun contatto trovato.",
   "No countries have been added yet in any contact’s addresses.": "Nessun paese è stato ancora aggiunto agli indirizzi dei contatti.",
@@ -984,6 +984,7 @@
   "The page has been deleted": "La pagina è stata eliminata",
   "The page has been updated": "La pagina è stata aggiornata",
   "The password is incorrect.": "La password non è corretta.",
+  "The password should be at least 8 characters long.": "La password deve contenere almeno 8 caratteri.",
   "The pet category has been created": "La categoria animali domestici è stata creata",
   "The pet category has been deleted": "La categoria degli animali domestici è stata eliminata",
   "The pet category has been updated": "La categoria degli animali domestici è stata aggiornata",
@@ -1104,6 +1105,7 @@
   "Too Many Requests": "Troppe richieste",
   "To see if they need anything": "Per vedere se hanno bisogno di qualcosa",
   "To start, you need to create a vault.": "Per iniziare, è necessario creare un deposito.",
+  "To start, you need to create a vault. A vault is a private space where you can store your contacts.": "Per iniziare, è necessario creare un deposito. Un caveau è uno spazio privato in cui puoi archiviare i tuoi contatti.",
   "Total:": "Totale:",
   "Total streaks": "Strisce totali",
   "Track a new metric": "Tieni traccia di una nuova metrica",
@@ -1162,6 +1164,7 @@
   "Verified": "Verificato",
   "Verify Email Address": "Verifica indirizzo email",
   "Verify this email address": "Verifica questo indirizzo email",
+  "Version :version.": "Versione :version.",
   "Version :version — commit [:short](:url).": "Versione :version — commit [:short](:url).",
   "Via Telegram": "Tramite Telegramma",
   "Video call": "Video chiamata",
