--- a/lang/pa.json
+++ b/lang/pa.json
@@ -579,8 +579,8 @@
   "Log in": "ਲਾਗਿਨ",
   "Login": "ਲਾਗਿਨ",
   "Login with:": "ਇਸ ਨਾਲ ਲੌਗਇਨ ਕਰੋ:",
-  "Log Out": "ਲਾੱਗ ਆਊਟ, ਬਾਹਰ ਆਉਣਾ",
   "Logout": "ਲਾੱਗ ਆਊਟ, ਬਾਹਰ ਆਉਣਾ",
+  "Log Out": "ਲਾੱਗ ਆਊਟ, ਬਾਹਰ ਆਉਣਾ",
   "Log Out Other Browser Sessions": "ਹੋਰ ਬਰਾਊਜ਼ਰ ਸੈਸ਼ਨ ਲੌਗ ਆਉਟ ਕਰੋ",
   "Longest streak": "ਸਭ ਤੋਂ ਲੰਬੀ ਲਕੀਰ",
   "Love": "ਪਿਆਰ",
@@ -642,8 +642,8 @@
   "New Password": "ਨਵਾਂ ਪਾਸਵਰਡ",
   "New to Monica?": "Monica ਲਈ ਨਵੇਂ?",
   "Next": "ਅਗਲਾ",
-  "Nickname": "ਉਪਨਾਮ",
   "nickname": "ਉਪਨਾਮ",
+  "Nickname": "ਉਪਨਾਮ",
   "No cities have been added yet in any contact’s addresses.": "ਕਿਸੇ ਸੰਪਰਕ ਦੇ ਪਤੇ ਵਿੱਚ ਅਜੇ ਤੱਕ ਕੋਈ ਸ਼ਹਿਰ ਸ਼ਾਮਲ ਨਹੀਂ ਕੀਤਾ ਗਿਆ ਹੈ।",
   "No contacts found.": "ਕੋਈ ਸੰਪਰਕ ਨਹੀਂ ਮਿਲੇ।",
   "No countries have been added yet in any contact’s addresses.": "ਕਿਸੇ ਵੀ ਸੰਪਰਕ ਦੇ ਪਤੇ ਵਿੱਚ ਅਜੇ ਤੱਕ ਕੋਈ ਦੇਸ਼ ਸ਼ਾਮਲ ਨਹੀਂ ਕੀਤਾ ਗਿਆ ਹੈ।",
@@ -986,6 +986,7 @@
   "The page has been deleted": "ਪੰਨਾ ਮਿਟਾ ਦਿੱਤਾ ਗਿਆ ਹੈ",
   "The page has been updated": "ਪੰਨਾ ਅੱਪਡੇਟ ਕੀਤਾ ਗਿਆ ਹੈ",
   "The password is incorrect.": "ਪਾਸਵਰਡ ਗਲਤ ਹੈ।",
+  "The password should be at least 8 characters long.": "ਪਾਸਵਰਡ ਘੱਟੋ-ਘੱਟ 8 ਅੱਖਰਾਂ ਦਾ ਹੋਣਾ ਚਾਹੀਦਾ ਹੈ।",
   "The pet category has been created": "ਪਾਲਤੂ ਸ਼੍ਰੇਣੀ ਬਣਾਈ ਗਈ ਹੈ",
   "The pet category has been deleted": "ਪਾਲਤੂ ਸ਼੍ਰੇਣੀ ਨੂੰ ਮਿਟਾ ਦਿੱਤਾ ਗਿਆ ਹੈ",
   "The pet category has been updated": "ਪਾਲਤੂ ਜਾਨਵਰਾਂ ਦੀ ਸ਼੍ਰੇਣੀ ਨੂੰ ਅੱਪਡੇਟ ਕੀਤਾ ਗਿਆ ਹੈ",
@@ -1104,6 +1105,7 @@
   "Too Many Requests": "ਬਹੁਤ ਸਾਰੀਆਂ ਬੇਨਤੀਆਂ",
   "To see if they need anything": "ਇਹ ਦੇਖਣ ਲਈ ਕਿ ਕੀ ਉਹਨਾਂ ਨੂੰ ਕਿਸੇ ਚੀਜ਼ ਦੀ ਲੋੜ ਹੈ",
   "To start, you need to create a vault.": "ਸ਼ੁਰੂ ਕਰਨ ਲਈ, ਤੁਹਾਨੂੰ ਇੱਕ ਵਾਲਟ ਬਣਾਉਣ ਦੀ ਲੋੜ ਹੈ।",
+  "To start, you need to create a vault. A vault is a private space where you can store your contacts.": "ਸ਼ੁਰੂ ਕਰਨ ਲਈ, ਤੁਹਾਨੂੰ ਇੱਕ ਵਾਲਟ ਬਣਾਉਣ ਦੀ ਲੋੜ ਹੈ। ਵਾਲਟ ਇੱਕ ਨਿੱਜੀ ਥਾਂ ਹੈ ਜਿੱਥੇ ਤੁਸੀਂ ਆਪਣੇ ਸੰਪਰਕਾਂ ਨੂੰ ਸਟੋਰ ਕਰ ਸਕਦੇ ਹੋ।",
   "Total:": "ਕੁੱਲ:",
   "Total streaks": "ਕੁੱਲ ਸਟ੍ਰੀਕਸ",
   "Track a new metric": "ਇੱਕ ਨਵਾਂ ਮੈਟ੍ਰਿਕ ਟ੍ਰੈਕ ਕਰੋ",
@@ -1163,6 +1165,7 @@
   "Verified": "ਪ੍ਰਮਾਣਿਤ",
   "Verify Email Address": "ਈਮੇਲ ਪਤੇ ਦੀ ਪੁਸ਼ਟੀ ਕਰੋ",
   "Verify this email address": "ਇਸ ਈਮੇਲ ਪਤੇ ਦੀ ਪੁਸ਼ਟੀ ਕਰੋ",
+  "Version :version.": "ਸੰਸਕਰਣ :version।",
   "Version :version — commit [:short](:url).": "ਸੰਸਕਰਣ :version — ਕਮਿਟ [:short](:url)।",
   "Via Telegram": "ਟੈਲੀਗ੍ਰਾਮ ਦੁਆਰਾ",
   "Video call": "ਵੀਡੀਓ ਕਾਲ",
