--- a/lang/ro.json
+++ b/lang/ro.json
@@ -578,8 +578,8 @@
   "Log in": "Autentificare",
   "Login": "Autentificare",
   "Login with:": "Logheaza-te cu:",
-  "Log Out": "Deconectează",
   "Logout": "Deautentificare",
+  "Log Out": "Deconectează",
   "Log Out Other Browser Sessions": "Deconectați Alte Sesiuni De Browser",
   "Longest streak": "Cea mai lungă serie",
   "Love": "Dragoste",
@@ -641,8 +641,8 @@
   "New Password": "Parolă Nouă",
   "New to Monica?": "Nou cu Monica?",
   "Next": "Următorul",
-  "Nickname": "Poreclă",
   "nickname": "poreclă",
+  "Nickname": "Poreclă",
   "No cities have been added yet in any contact’s addresses.": "Niciun oraș nu a fost adăugat încă la adresele niciunei persoane de contact.",
   "No contacts found.": "Nu s-au găsit persoane de contact.",
   "No countries have been added yet in any contact’s addresses.": "Nicio țară nu a fost adăugată încă la adresele vreunei persoane de contact.",
@@ -984,6 +984,7 @@
   "The page has been deleted": "Pagina a fost ștearsă",
   "The page has been updated": "Pagina a fost actualizată",
   "The password is incorrect.": "Parola este incorectă.",
+  "The password should be at least 8 characters long.": "Parola trebuie să aibă cel puțin 8 caractere.",
   "The pet category has been created": "Categoria de animale de companie a fost creată",
   "The pet category has been deleted": "Categoria de animale de companie a fost ștearsă",
   "The pet category has been updated": "Categoria animalelor de companie a fost actualizată",
@@ -1104,6 +1105,7 @@
   "Too Many Requests": "Prea multe cereri",
   "To see if they need anything": "Pentru a vedea dacă au nevoie de ceva",
   "To start, you need to create a vault.": "Pentru a începe, trebuie să creați un seif.",
+  "To start, you need to create a vault. A vault is a private space where you can store your contacts.": "Pentru a începe, trebuie să creați un seif. Un seif este un spațiu privat în care vă puteți stoca contactele.",
   "Total:": "Total:",
   "Total streaks": "Drumuri totale",
   "Track a new metric": "Urmăriți o nouă valoare",
@@ -1162,6 +1164,7 @@
   "Verified": "Verificat",
   "Verify Email Address": "Verifică adresă de e-mail",
   "Verify this email address": "Verifica aceasta adresa de email",
+  "Version :version.": "Versiunea :version.",
   "Version :version — commit [:short](:url).": "Versiunea :version — commit [:short](:url).",
   "Via Telegram": "Prin Telegram",
   "Video call": "Apel video",
