--- a/lang/ru.json
+++ b/lang/ru.json
@@ -578,8 +578,8 @@
   "Log in": "Войти",
   "Login": "Войти",
   "Login with:": "Войдите с:",
-  "Log Out": "Выйти",
   "Logout": "Выйти",
+  "Log Out": "Выйти",
   "Log Out Other Browser Sessions": "Завершить другие сессии",
   "Longest streak": "Самая длинная серия",
   "Love": "Любовь",
@@ -641,8 +641,8 @@
   "New Password": "Новый пароль",
   "New to Monica?": "Впервые с Monica?",
   "Next": "Следующий",
-  "Nickname": "Псевдоним",
   "nickname": "прозвище",
+  "Nickname": "Псевдоним",
   "No cities have been added yet in any contact’s addresses.": "Ни в одном адресе контакта еще не добавлено ни одного города.",
   "No contacts found.": "Контакты не найдены.",
   "No countries have been added yet in any contact’s addresses.": "Ни в одном адресе контакта пока не добавлено ни одной страны.",
@@ -984,6 +984,7 @@
   "The page has been deleted": "Страница удалена",
   "The page has been updated": "Страница обновлена",
   "The password is incorrect.": "Некорректный пароль.",
+  "The password should be at least 8 characters long.": "Длина пароля должна быть не менее 8 символов.",
   "The pet category has been created": "Категория домашних животных создана.",
   "The pet category has been deleted": "Категория домашних животных удалена.",
   "The pet category has been updated": "Категория домашних животных обновлена.",
@@ -1104,6 +1105,7 @@
   "Too Many Requests": "Слишком много запросов",
   "To see if they need anything": "Чтобы узнать, нужно ли им что-нибудь",
   "To start, you need to create a vault.": "Для начала вам нужно создать хранилище.",
+  "To start, you need to create a vault. A vault is a private space where you can store your contacts.": "Для начала вам нужно создать хранилище. Хранилище – это личное пространство, где вы можете хранить свои контакты.",
   "Total:": "Общий:",
   "Total streaks": "Всего полос",
   "Track a new metric": "Отслеживайте новую метрику",
@@ -1162,6 +1164,7 @@
   "Verified": "Проверено",
   "Verify Email Address": "Подтвердить адрес электронной почты",
   "Verify this email address": "Подтвердите этот адрес электронной почты",
+  "Version :version.": "Версия :version.",
   "Version :version — commit [:short](:url).": "Версия :version — зафиксируйте [:short](:url).",
   "Via Telegram": "Через Телеграм",
   "Video call": "Видеозвонок",
