--- a/lang/sv.json
+++ b/lang/sv.json
@@ -578,8 +578,8 @@
   "Log in": "Inloggning",
   "Login": "Logga in",
   "Login with:": "Logga in med:",
-  "Log Out": "utloggning",
   "Logout": "Logga ut",
+  "Log Out": "utloggning",
   "Log Out Other Browser Sessions": "Logga Ut Andra Webbläsarsessioner",
   "Longest streak": "Längsta rad",
   "Love": "Kärlek",
@@ -641,8 +641,8 @@
   "New Password": "Nytt lösenord",
   "New to Monica?": "Ny hos Monica?",
   "Next": "Nästa",
-  "Nickname": "Smeknamn",
   "nickname": "smeknamn",
+  "Nickname": "Smeknamn",
   "No cities have been added yet in any contact’s addresses.": "Inga städer har lagts till ännu i någon kontakts adresser.",
   "No contacts found.": "Inga kontakter hittades.",
   "No countries have been added yet in any contact’s addresses.": "Inga länder har lagts till ännu i någon kontakts adresser.",
@@ -984,6 +984,7 @@
   "The page has been deleted": "Sidan har tagits bort",
   "The page has been updated": "Sidan har uppdaterats",
   "The password is incorrect.": "Lösenordet är felaktigt.",
+  "The password should be at least 8 characters long.": "Lösenordet bör vara minst 8 tecken långt.",
   "The pet category has been created": "Kategorin husdjur har skapats",
   "The pet category has been deleted": "Husdjurskategorin har tagits bort",
   "The pet category has been updated": "Husdjurskategorin har uppdaterats",
@@ -1104,6 +1105,7 @@
   "Too Many Requests": "För många anrop",
   "To see if they need anything": "För att se om de behöver något",
   "To start, you need to create a vault.": "För att börja måste du skapa ett valv.",
+  "To start, you need to create a vault. A vault is a private space where you can store your contacts.": "För att börja måste du skapa ett valv. Ett valv är ett privat utrymme där du kan lagra dina kontakter.",
   "Total:": "Total:",
   "Total streaks": "Totala streck",
   "Track a new metric": "Spåra ett nytt mått",
@@ -1162,6 +1164,7 @@
   "Verified": "Verifierad",
   "Verify Email Address": "Bekräfta e-postadress",
   "Verify this email address": "Verifiera den här e-postadressen",
+  "Version :version.": "Version :version.",
   "Version :version — commit [:short](:url).": "Version :version — commit [:short](:url).",
   "Via Telegram": "Via Telegram",
   "Video call": "Videosamtal",
