--- a/lang/te.json
+++ b/lang/te.json
@@ -579,8 +579,8 @@
   "Log in": "ప్రవేశించండి",
   "Login": "ప్రవేశించండి",
   "Login with:": "తో లాగిన్ అవ్వండి:",
-  "Log Out": "లాగ్ అవుట్ చేయండి",
   "Logout": "లాగ్అవుట్",
+  "Log Out": "లాగ్ అవుట్ చేయండి",
   "Log Out Other Browser Sessions": "ఇతర బ్రౌజర్ సెషన్‌లను లాగ్ అవుట్ చేయండి",
   "Longest streak": "పొడవైన గీత",
   "Love": "ప్రేమ",
@@ -642,8 +642,8 @@
   "New Password": "కొత్త పాస్వర్డ్",
   "New to Monica?": "Monica కొత్త?",
   "Next": "తరువాత",
-  "Nickname": "మారుపేరు",
   "nickname": "మారుపేరు",
+  "Nickname": "మారుపేరు",
   "No cities have been added yet in any contact’s addresses.": "ఏ సంప్రదింపు చిరునామాలలో ఇంకా నగరాలు జోడించబడలేదు.",
   "No contacts found.": "పరిచయాలు ఏవీ కనుగొనబడలేదు.",
   "No countries have been added yet in any contact’s addresses.": "ఏ సంప్రదింపు చిరునామాలలో ఇంకా దేశాలు జోడించబడలేదు.",
@@ -986,6 +986,7 @@
   "The page has been deleted": "పేజీ తొలగించబడింది",
   "The page has been updated": "పేజీ నవీకరించబడింది",
   "The password is incorrect.": "పాస్‌వర్డ్ తప్పు.",
+  "The password should be at least 8 characters long.": "పాస్‌వర్డ్ కనీసం 8 అక్షరాల పొడవు ఉండాలి.",
   "The pet category has been created": "పెంపుడు జంతువుల వర్గం సృష్టించబడింది",
   "The pet category has been deleted": "పెంపుడు జంతువుల వర్గం తొలగించబడింది",
   "The pet category has been updated": "పెంపుడు జంతువుల వర్గం నవీకరించబడింది",
@@ -1104,6 +1105,7 @@
   "Too Many Requests": "చాలా ఎక్కువ అభ్యర్థనలు",
   "To see if they need anything": "వారికి ఏమైనా అవసరమా అని చూడడానికి",
   "To start, you need to create a vault.": "ప్రారంభించడానికి, మీరు ఖజానాను సృష్టించాలి.",
+  "To start, you need to create a vault. A vault is a private space where you can store your contacts.": "ప్రారంభించడానికి, మీరు ఖజానాను సృష్టించాలి. వాల్ట్ అనేది మీరు మీ పరిచయాలను నిల్వ చేయగల ప్రైవేట్ స్థలం.",
   "Total:": "మొత్తం:",
   "Total streaks": "మొత్తం స్ట్రీక్స్",
   "Track a new metric": "కొత్త మెట్రిక్‌ని ట్రాక్ చేయండి",
@@ -1163,6 +1165,7 @@
   "Verified": "ధృవీకరించబడింది",
   "Verify Email Address": "ఇమెయిల్ చిరునామాను ధృవీకరించండి",
   "Verify this email address": "ఈ ఇమెయిల్ చిరునామాను ధృవీకరించండి",
+  "Version :version.": "సంస్కరణ :version.",
   "Version :version — commit [:short](:url).": "వెర్షన్ :version — కట్టుబడి [:short](:url).",
   "Via Telegram": "టెలిగ్రామ్ ద్వారా",
   "Video call": "విడియో కాల్",
