--- a/lang/tr.json
+++ b/lang/tr.json
@@ -578,8 +578,8 @@
   "Log in": "Giriş yap",
   "Login": "Giriş Yap",
   "Login with:": "İle giriş:",
-  "Log Out": "Çıkış Yap",
   "Logout": "Çıkış Yap",
+  "Log Out": "Çıkış Yap",
   "Log Out Other Browser Sessions": "Diğer Tarayıcılardaki Oturumları Sonlandır",
   "Longest streak": "En uzun seri",
   "Love": "Aşk",
@@ -641,8 +641,8 @@
   "New Password": "Yeni Parola",
   "New to Monica?": "Monica’da yeni misin?",
   "Next": "Sonraki",
-  "Nickname": "Takma ad",
   "nickname": "Takma ad",
+  "Nickname": "Takma ad",
   "No cities have been added yet in any contact’s addresses.": "Henüz herhangi bir kişinin adresine şehir eklenmedi.",
   "No contacts found.": "Hiçbir kişi bulunamadı.",
   "No countries have been added yet in any contact’s addresses.": "Henüz herhangi bir kişinin adresine ülke eklenmedi.",
@@ -984,6 +984,7 @@
   "The page has been deleted": "Sayfa silindi",
   "The page has been updated": "Sayfa güncellendi",
   "The password is incorrect.": "Parola hatalı.",
+  "The password should be at least 8 characters long.": "Şifre en az 8 karakter uzunluğunda olmalıdır.",
   "The pet category has been created": "Evcil hayvan kategorisi oluşturuldu",
   "The pet category has been deleted": "Evcil hayvan kategorisi silindi",
   "The pet category has been updated": "Evcil hayvan kategorisi güncellendi",
@@ -1104,6 +1105,7 @@
   "Too Many Requests": "Çok Fazla İstek",
   "To see if they need anything": "Bir şeye ihtiyaçları olup olmadığını görmek için",
   "To start, you need to create a vault.": "Başlamak için bir kasa oluşturmanız gerekir.",
+  "To start, you need to create a vault. A vault is a private space where you can store your contacts.": "Başlamak için bir kasa oluşturmanız gerekir. Kasa, kişilerinizi saklayabileceğiniz özel bir alandır.",
   "Total:": "Toplam:",
   "Total streaks": "Toplam seriler",
   "Track a new metric": "Yeni bir metriği izleme",
@@ -1162,6 +1164,7 @@
   "Verified": "Doğrulandı",
   "Verify Email Address": "E-posta Adresini Doğrula",
   "Verify this email address": "Bu e-posta adresini doğrulayın",
+  "Version :version.": "Sürüm :version.",
   "Version :version — commit [:short](:url).": "Sürüm :version — işleme [:short](:url).",
   "Via Telegram": "Telegram aracılığıyla",
   "Video call": "Görüntülü arama",
