--- a/lang/ur.json
+++ b/lang/ur.json
@@ -578,8 +578,8 @@
   "Log in": "میں لاگ ان کریں",
   "Login": "لاگ ان کریں",
   "Login with:": "کے ساتھ لاگ ان:",
-  "Log Out": "باہر لاگ ان کریں",
   "Logout": "لاگ آوٹ",
+  "Log Out": "باہر لاگ ان کریں",
   "Log Out Other Browser Sessions": "لاگ آؤٹ دیگر براؤزر سیشن",
   "Longest streak": "سب سے طویل سلسلہ",
   "Love": "محبت",
@@ -641,8 +641,8 @@
   "New Password": "نیا پاس ورڈ",
   "New to Monica?": "Monica کے لیے نئے ہیں؟",
   "Next": "اگلے",
-  "Nickname": "عرفی نام",
   "nickname": "عرفی نام",
+  "Nickname": "عرفی نام",
   "No cities have been added yet in any contact’s addresses.": "کسی بھی رابطے کے پتے میں ابھی تک کوئی شہر شامل نہیں کیا گیا ہے۔",
   "No contacts found.": "کوئی رابطے نہیں ملے۔",
   "No countries have been added yet in any contact’s addresses.": "کسی بھی رابطے کے پتے میں ابھی تک کوئی ملک شامل نہیں کیا گیا ہے۔",
@@ -984,6 +984,7 @@
   "The page has been deleted": "صفحہ حذف کر دیا گیا ہے۔",
   "The page has been updated": "صفحہ کو اپ ڈیٹ کر دیا گیا ہے۔",
   "The password is incorrect.": "پاس ورڈ غلط ہے۔",
+  "The password should be at least 8 characters long.": "پاس ورڈ کم از کم 8 حروف کا ہونا چاہیے۔",
   "The pet category has been created": "پالتو جانوروں کی کیٹیگری بنائی گئی ہے۔",
   "The pet category has been deleted": "پالتو جانوروں کے زمرے کو حذف کر دیا گیا ہے۔",
   "The pet category has been updated": "پالتو جانوروں کے زمرے کو اپ ڈیٹ کر دیا گیا ہے۔",
@@ -1104,6 +1105,7 @@
   "Too Many Requests": "بہت سے درخواستوں",
   "To see if they need anything": "یہ دیکھنے کے لیے کہ انہیں کسی چیز کی ضرورت ہے۔",
   "To start, you need to create a vault.": "شروع کرنے کے لیے، آپ کو ایک والٹ بنانے کی ضرورت ہے۔",
+  "To start, you need to create a vault. A vault is a private space where you can store your contacts.": "شروع کرنے کے لیے، آپ کو ایک والٹ بنانے کی ضرورت ہے۔ والٹ ایک نجی جگہ ہے جہاں آپ اپنے رابطوں کو محفوظ کر سکتے ہیں۔",
   "Total:": "کل:",
   "Total streaks": "کل لکیریں۔",
   "Track a new metric": "ایک نیا میٹرک ٹریک کریں۔",
@@ -1162,6 +1164,7 @@
   "Verified": "تصدیق شدہ",
   "Verify Email Address": "ای میل ایڈریس کی تصدیق کریں",
   "Verify this email address": "اس ای میل ایڈریس کی تصدیق کریں۔",
+  "Version :version.": "ورژن :version۔",
   "Version :version — commit [:short](:url).": "ورژن :version — کمٹ [:short](:url)۔",
   "Via Telegram": "ٹیلیگرام کے ذریعے",
   "Video call": "ویڈیو کال",
