--- a/lang/bn.json
+++ b/lang/bn.json
@@ -578,8 +578,8 @@
   "Log in": "লগইন করুন",
   "Login": "লগইন",
   "Login with:": "লগইন করুন:",
-  "Log Out": "লগ-আউট",
   "Logout": "লগ-আউট",
+  "Log Out": "লগ-আউট",
   "Log Out Other Browser Sessions": "অন্য ব্রাউজার সেশনে লগ আউট করুন",
   "Longest streak": "দীর্ঘতম ধারা",
   "Love": "ভালবাসা",
@@ -641,8 +641,8 @@
   "New Password": "নতুন পাসওয়ার্ড",
   "New to Monica?": "Monica নতুন?",
   "Next": "পরবর্তী",
-  "Nickname": "ডাকনাম",
   "nickname": "ডাকনাম",
+  "Nickname": "ডাকনাম",
   "No cities have been added yet in any contact’s addresses.": "কোনো পরিচিতির ঠিকানায় এখনো কোনো শহর যোগ করা হয়নি।",
   "No contacts found.": "কোন পরিচিতি পাওয়া যায়নি.",
   "No countries have been added yet in any contact’s addresses.": "কোনো পরিচিতির ঠিকানায় এখনো কোনো দেশ যোগ করা হয়নি।",
@@ -984,6 +984,7 @@
   "The page has been deleted": "পৃষ্ঠাটি মুছে ফেলা হয়েছে",
   "The page has been updated": "পাতা আপডেট করা হয়েছে",
   "The password is incorrect.": "পাসওয়ার্ডটি ভুল।",
+  "The password should be at least 8 characters long.": "পাসওয়ার্ডটি কমপক্ষে 8 অক্ষরের হওয়া উচিত।",
   "The pet category has been created": "পোষা ক্যাটাগরি তৈরি করা হয়েছে",
   "The pet category has been deleted": "পোষা শ্রেণীবিভাগ মুছে ফেলা হয়েছে",
   "The pet category has been updated": "পোষা বিভাগ আপডেট করা হয়েছে",
@@ -1104,6 +1105,7 @@
   "Too Many Requests": "অনেক অনুরোধ",
   "To see if they need anything": "তাদের কিছু দরকার কিনা তা দেখার জন্য",
   "To start, you need to create a vault.": "শুরু করতে, আপনাকে একটি খিলান তৈরি করতে হবে।",
+  "To start, you need to create a vault. A vault is a private space where you can store your contacts.": "শুরু করতে, আপনাকে একটি খিলান তৈরি করতে হবে। একটি ভল্ট হল একটি ব্যক্তিগত স্থান যেখানে আপনি আপনার পরিচিতি সংরক্ষণ করতে পারেন।",
   "Total:": "মোট:",
   "Total streaks": "মোট রেখা",
   "Track a new metric": "একটি নতুন মেট্রিক ট্র্যাক করুন",
@@ -1162,6 +1164,7 @@
   "Verified": "যাচাই",
   "Verify Email Address": "ই-মেইল ঠিকানা যাচাই করুন",
   "Verify this email address": "এই ই - মেইল ঠিকানা যাচাই করুন",
+  "Version :version.": "সংস্করণ :version।",
   "Version :version — commit [:short](:url).": "সংস্করণ :version — কমিট [:short](:url)।",
   "Via Telegram": "টেলিগ্রামের মাধ্যমে",
   "Video call": "ভিডিও কল",
