--- a/lang/fr.json
+++ b/lang/fr.json
@@ -578,8 +578,8 @@
   "Log in": "Se connecter",
   "Login": "Connexion",
   "Login with:": "Se connecter avec :",
-  "Log Out": "Se déconnecter",
   "Logout": "Déconnexion",
+  "Log Out": "Se déconnecter",
   "Log Out Other Browser Sessions": "Déconnecter les sessions ouvertes sur d’autres navigateurs",
   "Longest streak": "La plus longue série",
   "Love": "Amour",
@@ -641,8 +641,8 @@
   "New Password": "Nouveau mot de passe",
   "New to Monica?": "Nouveau sur Monica ?",
   "Next": "Suivant",
-  "Nickname": "Surnom",
   "nickname": "surnom",
+  "Nickname": "Surnom",
   "No cities have been added yet in any contact’s addresses.": "Aucune ville n’a encore été ajoutée dans les adresses des contacts.",
   "No contacts found.": "Aucun contact trouvé.",
   "No countries have been added yet in any contact’s addresses.": "Aucun pays n’a encore été ajouté dans les adresses des contacts.",
@@ -984,6 +984,7 @@
   "The page has been deleted": "La page a été supprimée",
   "The page has been updated": "La page a été mise à jour",
   "The password is incorrect.": "Le mot de passe est incorrect.",
+  "The password should be at least 8 characters long.": "Le mot de passe doit comporter au moins 8 caractères.",
   "The pet category has been created": "La catégorie d’animaux de compagnie a été créée",
   "The pet category has been deleted": "La catégorie d’animaux de compagnie a été supprimée",
   "The pet category has been updated": "La catégorie d’animaux de compagnie a été mise à jour",
@@ -1014,7 +1015,7 @@
   "There are no loans yet.": "Il n’y a pas encore de prêt.",
   "There are no notes yet.": "Il n’y a pas encore de note.",
   "There are no other users in this account.": "Il n’y a aucun autre utilisateur dans ce compte.",
-  "There are no pets yet.": "Il n’y a pas encore d'animaux de compagnie.",
+  "There are no pets yet.": "Il n’y a pas encore d’animaux de compagnie.",
   "There are no photos yet.": "Il n’y a aucune photo pour le moment.",
   "There are no posts yet.": "Il n’y a pas encore de message.",
   "There are no quick facts here yet.": "Il n’y a pas encore de fait rapide ici.",
@@ -1104,6 +1105,7 @@
   "Too Many Requests": "Trop de requêtes",
   "To see if they need anything": "Pour voir s’ils ont besoin de quelque chose",
   "To start, you need to create a vault.": "Pour commencer, vous devez créer un coffre.",
+  "To start, you need to create a vault. A vault is a private space where you can store your contacts.": "Pour commencer, vous devez créer un coffre-fort. Un coffre-fort est un espace privé dans lequel vous pouvez stocker vos contacts.",
   "Total:": "Total :",
   "Total streaks": "Total des séries",
   "Track a new metric": "Suivre une nouvelle métrique",
@@ -1162,6 +1164,7 @@
   "Verified": "Vérifié",
   "Verify Email Address": "Vérifier l’adresse e-mail",
   "Verify this email address": "Vérifiez cette adresse e-mail",
+  "Version :version.": "Version :version.",
   "Version :version — commit [:short](:url).": "Version :version — commit [:short](:url).",
   "Via Telegram": "Par Telegram",
   "Video call": "Appel vidéo",
