--- a/lang/ja.json
+++ b/lang/ja.json
@@ -578,8 +578,8 @@
   "Log in": "ログイン",
   "Login": "ログイン",
   "Login with:": "でログイン：",
-  "Log Out": "ログアウト",
   "Logout": "ログアウト",
+  "Log Out": "ログアウト",
   "Log Out Other Browser Sessions": "全ての端末からログアウト",
   "Longest streak": "最長連続記録",
   "Love": "愛",
@@ -641,8 +641,8 @@
   "New Password": "新しいパスワード",
   "New to Monica?": "Monica は初めてですか?",
   "Next": "次",
-  "Nickname": "ニックネーム",
   "nickname": "ニックネーム",
+  "Nickname": "ニックネーム",
   "No cities have been added yet in any contact’s addresses.": "どの連絡先の住所にもまだ都市が追加されていません。",
   "No contacts found.": "連絡先が見つかりませんでした。",
   "No countries have been added yet in any contact’s addresses.": "どの連絡先の住所にもまだ国が追加されていません。",
@@ -984,6 +984,7 @@
   "The page has been deleted": "ページは削除されました",
   "The page has been updated": "ページが更新されました",
   "The password is incorrect.": "パスワードが正しくありません。",
+  "The password should be at least 8 characters long.": "パスワードは 8 文字以上にする必要があります。",
   "The pet category has been created": "ペットカテゴリーができました",
   "The pet category has been deleted": "ペットのカテゴリが削除されました",
   "The pet category has been updated": "ペットカテゴリーを更新しました",
@@ -1104,6 +1105,7 @@
   "Too Many Requests": "リクエストが多すぎます",
   "To see if they need anything": "何か必要なものがあるかどうかを確認するため",
   "To start, you need to create a vault.": "まず、ボールトを作成する必要があります。",
+  "To start, you need to create a vault. A vault is a private space where you can store your contacts.": "まず、ボールトを作成する必要があります。ボールトは、連絡先を保存できるプライベート スペースです。",
   "Total:": "合計：",
   "Total streaks": "合計ストリーク数",
   "Track a new metric": "新しい指標を追跡する",
@@ -1162,6 +1164,7 @@
   "Verified": "確認済み",
   "Verify Email Address": "メールアドレスの確認",
   "Verify this email address": "このメールアドレスを確認してください",
+  "Version :version.": "バージョン :version。",
   "Version :version — commit [:short](:url).": "バージョン :version — コミット [:short](:url)。",
   "Via Telegram": "電報経由",
   "Video call": "ビデオ通話",
