--- a/lang/ml.json
+++ b/lang/ml.json
@@ -579,8 +579,8 @@
   "Log in": "ലോഗിൻ",
   "Login": "ലോഗിൻ",
   "Login with:": "ഇതുപയോഗിച്ച് ലോഗിൻ ചെയ്യുക:",
-  "Log Out": "ലോഗ് ഔട്ട് ചെയ്യുക",
   "Logout": "പുറത്തുകടക്കുക",
+  "Log Out": "ലോഗ് ഔട്ട് ചെയ്യുക",
   "Log Out Other Browser Sessions": "മറ്റ് ബ്രൗസർ സെഷനുകൾ ലോഗ് ഔട്ട് ചെയ്യുക",
   "Longest streak": "ഏറ്റവും ദൈർഘ്യമേറിയ സ്ട്രീക്ക്",
   "Love": "സ്നേഹം",
@@ -642,8 +642,8 @@
   "New Password": "പുതിയ പാസ്വേഡ്",
   "New to Monica?": "Monicaയിൽ പുതിയത്?",
   "Next": "അടുത്തത്",
-  "Nickname": "വിളിപ്പേര്",
   "nickname": "വിളിപ്പേര്",
+  "Nickname": "വിളിപ്പേര്",
   "No cities have been added yet in any contact’s addresses.": "ഒരു കോൺടാക്റ്റിന്റെയും വിലാസത്തിൽ ഇതുവരെ നഗരങ്ങളൊന്നും ചേർത്തിട്ടില്ല.",
   "No contacts found.": "കോൺടാക്‌റ്റുകളൊന്നും കണ്ടെത്തിയില്ല.",
   "No countries have been added yet in any contact’s addresses.": "ഒരു കോൺടാക്റ്റിന്റെയും വിലാസങ്ങളിൽ ഇതുവരെ രാജ്യങ്ങളൊന്നും ചേർത്തിട്ടില്ല.",
@@ -986,6 +986,7 @@
   "The page has been deleted": "പേജ് ഇല്ലാതാക്കി",
   "The page has been updated": "പേജ് അപ്ഡേറ്റ് ചെയ്തു",
   "The password is incorrect.": "പാസ്‌വേഡ് തെറ്റാണ്.",
+  "The password should be at least 8 characters long.": "പാസ്‌വേഡിന് കുറഞ്ഞത് 8 പ്രതീകങ്ങൾ ഉണ്ടായിരിക്കണം.",
   "The pet category has been created": "വളർത്തുമൃഗങ്ങളുടെ വിഭാഗം സൃഷ്ടിച്ചു",
   "The pet category has been deleted": "വളർത്തുമൃഗങ്ങളുടെ വിഭാഗം ഇല്ലാതാക്കി",
   "The pet category has been updated": "വളർത്തുമൃഗങ്ങളുടെ വിഭാഗം അപ്‌ഡേറ്റ് ചെയ്‌തു",
@@ -1104,6 +1105,7 @@
   "Too Many Requests": "വളരെയധികം അഭ്യർത്ഥനകൾ",
   "To see if they need anything": "അവർക്ക് എന്തെങ്കിലും ആവശ്യമുണ്ടോ എന്നറിയാൻ",
   "To start, you need to create a vault.": "ആരംഭിക്കുന്നതിന്, നിങ്ങൾ ഒരു നിലവറ സൃഷ്ടിക്കേണ്ടതുണ്ട്.",
+  "To start, you need to create a vault. A vault is a private space where you can store your contacts.": "ആരംഭിക്കുന്നതിന്, നിങ്ങൾ ഒരു നിലവറ സൃഷ്ടിക്കേണ്ടതുണ്ട്. നിങ്ങളുടെ കോൺടാക്റ്റുകൾ സൂക്ഷിക്കാൻ കഴിയുന്ന ഒരു സ്വകാര്യ ഇടമാണ് നിലവറ.",
   "Total:": "ആകെ:",
   "Total streaks": "ആകെ വരകൾ",
   "Track a new metric": "ഒരു പുതിയ മെട്രിക് ട്രാക്ക് ചെയ്യുക",
@@ -1163,6 +1165,7 @@
   "Verified": "പരിശോധിച്ചുറപ്പിച്ചു",
   "Verify Email Address": "ഇമെയിൽ വിലാസം പരിശോധിക്കുക",
   "Verify this email address": "ഈ ഇമെയിൽ വിലാസം പരിശോധിക്കുക",
+  "Version :version.": "പതിപ്പ് :version.",
   "Version :version — commit [:short](:url).": "പതിപ്പ് :version — പ്രതിബദ്ധത [:short](:url).",
   "Via Telegram": "ടെലിഗ്രാം വഴി",
   "Video call": "വീഡിയോ കോൾ",
