--- a/lang/nl.json
+++ b/lang/nl.json
@@ -578,8 +578,8 @@
   "Log in": "Inloggen",
   "Login": "Inloggen",
   "Login with:": "Login met:",
-  "Log Out": "Uitloggen",
   "Logout": "Uitloggen",
+  "Log Out": "Uitloggen",
   "Log Out Other Browser Sessions": "Uitloggen bij alle sessies",
   "Longest streak": "Langste reeks",
   "Love": "Liefde",
@@ -641,8 +641,8 @@
   "New Password": "Nieuw wachtwoord",
   "New to Monica?": "Nieuw bij Monica?",
   "Next": "Volgende",
-  "Nickname": "Bijnaam",
   "nickname": "bijnaam",
+  "Nickname": "Bijnaam",
   "No cities have been added yet in any contact’s addresses.": "Er zijn nog geen steden toegevoegd aan de adressen van contactpersonen.",
   "No contacts found.": "Geen contacten gevonden.",
   "No countries have been added yet in any contact’s addresses.": "Er zijn nog geen landen toegevoegd aan de adressen van contactpersonen.",
@@ -984,6 +984,7 @@
   "The page has been deleted": "De pagina is verwijderd",
   "The page has been updated": "De pagina is bijgewerkt",
   "The password is incorrect.": "Het wachtwoord is incorrect.",
+  "The password should be at least 8 characters long.": "Het wachtwoord moet minimaal 8 tekens lang zijn.",
   "The pet category has been created": "De categorie huisdieren is aangemaakt",
   "The pet category has been deleted": "De huisdiercategorie is verwijderd",
   "The pet category has been updated": "De categorie huisdieren is bijgewerkt",
@@ -1104,6 +1105,7 @@
   "Too Many Requests": "Te veel serververzoeken",
   "To see if they need anything": "Om te kijken of ze iets nodig hebben",
   "To start, you need to create a vault.": "Om te beginnen moet u een kluis maken.",
+  "To start, you need to create a vault. A vault is a private space where you can store your contacts.": "Om te beginnen moet u een kluis maken. Een kluis is een privéruimte waar u uw contacten kunt opslaan.",
   "Total:": "Totaal:",
   "Total streaks": "Totaal strepen",
   "Track a new metric": "Houd een nieuwe statistiek bij",
@@ -1162,6 +1164,7 @@
   "Verified": "Geverifieerd",
   "Verify Email Address": "Verifieer e-mailadres",
   "Verify this email address": "Verifieer dit e-mailadres",
+  "Version :version.": "Versie :version.",
   "Version :version — commit [:short](:url).": "Versie :version — commit [:short](:url).",
   "Via Telegram": "Via Telegram",
   "Video call": "Video-oproep",
