--- a/lang/nn.json
+++ b/lang/nn.json
@@ -578,8 +578,8 @@
   "Log in": "Logg Inn",
   "Login": "Logg inn",
   "Login with:": "Logg inn med:",
-  "Log Out": "Logg ut",
   "Logout": "Logg ut",
+  "Log Out": "Logg ut",
   "Log Out Other Browser Sessions": "Logg ut andre nettleserøkter",
   "Longest streak": "Lengste rekke",
   "Love": "Kjærlighet",
@@ -641,8 +641,8 @@
   "New Password": "Nytt passord",
   "New to Monica?": "Ny hos Monica?",
   "Next": "Neste",
-  "Nickname": "Kallenavn",
   "nickname": "kallenavn",
+  "Nickname": "Kallenavn",
   "No cities have been added yet in any contact’s addresses.": "Ingen byer er lagt til i noen kontakts adresser ennå.",
   "No contacts found.": "Ingen kontakter funnet.",
   "No countries have been added yet in any contact’s addresses.": "Ingen land er lagt til i noen kontaktadresser ennå.",
@@ -984,6 +984,7 @@
   "The page has been deleted": "Siden er slettet",
   "The page has been updated": "Siden er oppdatert",
   "The password is incorrect.": "Passordet er feil.",
+  "The password should be at least 8 characters long.": "Passordet skal være minst 8 tegn langt.",
   "The pet category has been created": "Kjæledyrskategorien er opprettet",
   "The pet category has been deleted": "Kjæledyrskategorien er slettet",
   "The pet category has been updated": "Kjæledyrkategorien er oppdatert",
@@ -1104,6 +1105,7 @@
   "Too Many Requests": "For mange førespurnader",
   "To see if they need anything": "For å se om de trenger noe",
   "To start, you need to create a vault.": "For å starte må du lage et hvelv.",
+  "To start, you need to create a vault. A vault is a private space where you can store your contacts.": "For å starte må du lage et hvelv. Et hvelv er et privat rom hvor du kan lagre kontaktene dine.",
   "Total:": "Total:",
   "Total streaks": "Totale streker",
   "Track a new metric": "Spor en ny beregning",
@@ -1162,6 +1164,7 @@
   "Verified": "Verifisert",
   "Verify Email Address": "Bekreft e-postadresse",
   "Verify this email address": "Bekreft denne e-postadressen",
+  "Version :version.": "Versjon :version.",
   "Version :version — commit [:short](:url).": "Versjon :version — commit [:short](:url).",
   "Via Telegram": "Via Telegram",
   "Video call": "Videosamtale",
