--- a/lang/pl.json
+++ b/lang/pl.json
@@ -578,8 +578,8 @@
   "Log in": "Zaloguj się",
   "Login": "Logowanie",
   "Login with:": "Zaloguj się z:",
-  "Log Out": "Wyloguj się",
   "Logout": "Wyloguj",
+  "Log Out": "Wyloguj się",
   "Log Out Other Browser Sessions": "Wyloguj inne sesje przeglądarki",
   "Longest streak": "Najdłuższa passa",
   "Love": "Miłość",
@@ -641,8 +641,8 @@
   "New Password": "Nowe Hasło",
   "New to Monica?": "Jesteś nowy w Monica?",
   "Next": "Następny",
-  "Nickname": "Przezwisko",
   "nickname": "przezwisko",
+  "Nickname": "Przezwisko",
   "No cities have been added yet in any contact’s addresses.": "Do adresów żadnego kontaktu nie dodano jeszcze żadnych miast.",
   "No contacts found.": "Nie znaleziono żadnych kontaktów.",
   "No countries have been added yet in any contact’s addresses.": "Do adresów żadnego kontaktu nie dodano jeszcze żadnych krajów.",
@@ -984,6 +984,7 @@
   "The page has been deleted": "Strona została usunięta",
   "The page has been updated": "Strona została zaktualizowana",
   "The password is incorrect.": "Hasło jest nieprawidłowe.",
+  "The password should be at least 8 characters long.": "Hasło powinno składać się z co najmniej 8 znaków.",
   "The pet category has been created": "Kategoria zwierząt domowych została utworzona",
   "The pet category has been deleted": "Kategoria zwierzaka została usunięta",
   "The pet category has been updated": "Kategoria zwierzaka została zaktualizowana",
@@ -1104,6 +1105,7 @@
   "Too Many Requests": "Zbyt Dużo Zapytań",
   "To see if they need anything": "Żeby zobaczyć, czy czegoś nie potrzebują",
   "To start, you need to create a vault.": "Aby rozpocząć, musisz utworzyć skarbiec.",
+  "To start, you need to create a vault. A vault is a private space where you can store your contacts.": "Aby rozpocząć, musisz utworzyć skarbiec. Skarbiec to prywatna przestrzeń, w której możesz przechowywać swoje kontakty.",
   "Total:": "Całkowity:",
   "Total streaks": "Totalne smugi",
   "Track a new metric": "Śledź nowy wskaźnik",
@@ -1162,6 +1164,7 @@
   "Verified": "Zweryfikowano",
   "Verify Email Address": "Zweryfikuj Adres E-mail",
   "Verify this email address": "Zweryfikuj ten adres e-mail",
+  "Version :version.": "Wersja :version.",
   "Version :version — commit [:short](:url).": "Wersja :version — zatwierdzenie [:short](:url).",
   "Via Telegram": "Za pośrednictwem telegramu",
   "Video call": "Wideo rozmowa",
