--- a/lang/vi.json
+++ b/lang/vi.json
@@ -578,8 +578,8 @@
   "Log in": "Đăng nhập",
   "Login": "Đăng nhập",
   "Login with:": "Đăng nhập với:",
-  "Log Out": "Đăng Xuất",
   "Logout": "Đăng xuất",
+  "Log Out": "Đăng Xuất",
   "Log Out Other Browser Sessions": "Đăng Xuất Khỏi Các Phiên Trình Duyệt Khác",
   "Longest streak": "Chuỗi dài nhất",
   "Love": "Yêu",
@@ -641,8 +641,8 @@
   "New Password": "Mật khẩu mới",
   "New to Monica?": "Mới đối với Monica?",
   "Next": "Kế tiếp",
-  "Nickname": "Tên nick",
   "nickname": "tên nick",
+  "Nickname": "Tên nick",
   "No cities have been added yet in any contact’s addresses.": "Chưa có thành phố nào được thêm vào bất kỳ địa chỉ liên hệ nào.",
   "No contacts found.": "Không tìm thấy địa chỉ liên hệ nào.",
   "No countries have been added yet in any contact’s addresses.": "Chưa có quốc gia nào được thêm vào bất kỳ địa chỉ liên hệ nào.",
@@ -984,6 +984,7 @@
   "The page has been deleted": "Trang đã bị xóa",
   "The page has been updated": "Trang đã được cập nhật",
   "The password is incorrect.": "Mật khẩu không đúng.",
+  "The password should be at least 8 characters long.": "Mật khẩu phải dài ít nhất 8 ký tự.",
   "The pet category has been created": "Danh mục thú cưng đã được tạo",
   "The pet category has been deleted": "Danh mục thú cưng đã bị xóa",
   "The pet category has been updated": "Danh mục thú cưng đã được cập nhật",
@@ -1104,6 +1105,7 @@
   "Too Many Requests": "Quá Nhiều Yêu Cầu",
   "To see if they need anything": "Để xem họ có cần gì không",
   "To start, you need to create a vault.": "Để bắt đầu, bạn cần tạo một vault.",
+  "To start, you need to create a vault. A vault is a private space where you can store your contacts.": "Để bắt đầu, bạn cần tạo một vault. Vault là không gian riêng tư nơi bạn có thể lưu trữ danh bạ của mình.",
   "Total:": "Tổng cộng:",
   "Total streaks": "Tổng số vệt",
   "Track a new metric": "Theo dõi số liệu mới",
@@ -1162,6 +1164,7 @@
   "Verified": "Đã xác minh",
   "Verify Email Address": "Xác Minh Địa Chỉ Email",
   "Verify this email address": "Xác nhận địa chỉ thư điện tử này",
+  "Version :version.": "Phiên bản :version.",
   "Version :version — commit [:short](:url).": "Phiên bản :version — cam kết [:short](:url).",
   "Via Telegram": "Qua Telegram",
   "Video call": "Cuộc gọi video",
