--- a/lang/zh_CN.json
+++ b/lang/zh_CN.json
@@ -578,8 +578,8 @@
   "Log in": "登录",
   "Login": "登录",
   "Login with:": "登录方式：",
-  "Log Out": "登出",
   "Logout": "登出",
+  "Log Out": "登出",
   "Log Out Other Browser Sessions": "注销其他浏览器的会话",
   "Longest streak": "最长连续纪录",
   "Love": "爱",
@@ -641,8 +641,8 @@
   "New Password": "新的密码",
   "New to Monica?": "Monica刚认识吗？",
   "Next": "下一个",
-  "Nickname": "昵称",
   "nickname": "昵称",
+  "Nickname": "昵称",
   "No cities have been added yet in any contact’s addresses.": "尚未在任何联系人地址中添加任何城市。",
   "No contacts found.": "未找到联系人。",
   "No countries have been added yet in any contact’s addresses.": "尚未在任何联系人地址中添加任何国家/地区。",
@@ -984,6 +984,7 @@
   "The page has been deleted": "该页面已被删除",
   "The page has been updated": "页面已更新",
   "The password is incorrect.": "密码不正确。",
+  "The password should be at least 8 characters long.": "密码长度应至少为 8 个字符。",
   "The pet category has been created": "宠物类别已创建",
   "The pet category has been deleted": "宠物类别已被删除",
   "The pet category has been updated": "宠物类别已更新",
@@ -1104,6 +1105,7 @@
   "Too Many Requests": "请求次数过多。",
   "To see if they need anything": "看看他们是否需要什么",
   "To start, you need to create a vault.": "首先，您需要创建一个保管库。",
+  "To start, you need to create a vault. A vault is a private space where you can store your contacts.": "首先，您需要创建一个保管库。保管库是您可以存储联系人的私人空间。",
   "Total:": "全部的：",
   "Total streaks": "总条纹数",
   "Track a new metric": "跟踪新指标",
@@ -1162,6 +1164,7 @@
   "Verified": "已验证",
   "Verify Email Address": "验证 E-mail",
   "Verify this email address": "验证此电子邮件地址",
+  "Version :version.": "版本 :version。",
   "Version :version — commit [:short](:url).": "版本 :version — 提交 [:short](:url)。",
   "Via Telegram": "通过电报",
   "Video call": "视频电话",
